cmake_minimum_required(VERSION 3.8)
project(fio_fio_2_2_8)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        arch/arch-aarch64.h
        arch/arch-alpha.h
        arch/arch-arm.h
        arch/arch-generic.h
        arch/arch-hppa.h
        arch/arch-ia64.h
        arch/arch-mips.h
        arch/arch-ppc.h
        arch/arch-s390.h
        arch/arch-sh.h
        arch/arch-sparc.h
        arch/arch-sparc64.h
        arch/arch-x86-common.h
        arch/arch-x86.h
        arch/arch-x86_64.h
        arch/arch.h
        compiler/compiler-gcc3.h
        compiler/compiler-gcc4.h
        compiler/compiler.h
        crc/crc16.c
        crc/crc16.h
        crc/crc32.c
        crc/crc32.h
        crc/crc32c-intel.c
        crc/crc32c.c
        crc/crc32c.h
        crc/crc64.c
        crc/crc64.h
        crc/crc7.c
        crc/crc7.h
        crc/fnv.c
        crc/fnv.h
        crc/md5.c
        crc/md5.h
        crc/murmur3.c
        crc/murmur3.h
        crc/sha1.c
        crc/sha1.h
        crc/sha256.c
        crc/sha256.h
        crc/sha512.c
        crc/sha512.h
        crc/test.c
        crc/test.h
        crc/xxhash.c
        crc/xxhash.h
        engines/binject.c
        engines/cpu.c
        engines/e4defrag.c
        engines/falloc.c
        engines/fusion-aw.c
        engines/gfapi.h
        engines/glusterfs.c
        engines/glusterfs_async.c
        engines/glusterfs_sync.c
        engines/guasi.c
        engines/libaio.c
        engines/libhdfs.c
        engines/mmap.c
        engines/mtd.c
        engines/net.c
        engines/null.c
        engines/posixaio.c
        engines/rbd.c
        engines/rdma.c
        engines/sg.c
        engines/skeleton_external.c
        engines/solarisaio.c
        engines/splice.c
        engines/sync.c
        engines/windowsaio.c
        examples/1mbs_clients.fio
        examples/aio-read.fio
        examples/cpuio.fio
        examples/disk-zone-profile.fio
        examples/e4defrag.fio
        examples/e4defrag2.fio
        examples/enospc-pressure.fio
        examples/falloc.fio
        examples/fixed-rate-submission.fio
        examples/flow.fio
        examples/fsx.fio
        examples/fusion-aw-sync.fio
        examples/gfapi.fio
        examples/iometer-file-access-server.fio
        examples/latency-profile.fio
        examples/libhdfs.fio
        examples/mtd.fio
        examples/netio.fio
        examples/netio_multicast.fio
        examples/null.fio
        examples/numa.fio
        examples/rbd.fio
        examples/rdmaio-client.fio
        examples/rdmaio-server.fio
        examples/ssd-steadystate.fio
        examples/ssd-test.fio
        examples/surface-scan.fio
        examples/tiobench-example.fio
        examples/zipf.fio
        exp/expression-parser.l
        exp/expression-parser.y
        exp/README.md
        exp/test-expression-parser.c
        lib/axmap.c
        lib/axmap.h
        lib/bloom.c
        lib/bloom.h
        lib/bswap.h
        lib/ffz.h
        lib/flist_sort.c
        lib/fls.h
        lib/gauss.c
        lib/gauss.h
        lib/getopt.h
        lib/getopt_long.c
        lib/getrusage.c
        lib/getrusage.h
        lib/hweight.c
        lib/hweight.h
        lib/ieee754.c
        lib/ieee754.h
        lib/inet_aton.c
        lib/inet_aton.h
        lib/lfsr.c
        lib/lfsr.h
        lib/libmtd.c
        lib/libmtd.h
        lib/libmtd_common.h
        lib/libmtd_int.h
        lib/libmtd_legacy.c
        lib/libmtd_xalloc.h
        lib/linux-dev-lookup.c
        lib/linux-dev-lookup.h
        lib/num2str.c
        lib/pow2.h
        lib/prio_tree.c
        lib/prio_tree.h
        lib/rand.c
        lib/rand.h
        lib/rbtree.c
        lib/rbtree.h
        lib/strcasestr.c
        lib/strcasestr.h
        lib/strsep.c
        lib/strsep.h
        lib/tp.c
        lib/tp.h
        lib/zipf.c
        lib/zipf.h
        os/windows/posix/include/arpa/inet.h
        os/windows/posix/include/asm/types.h
        os/windows/posix/include/netinet/in.h
        os/windows/posix/include/netinet/tcp.h
        os/windows/posix/include/sys/ioctl.h
        os/windows/posix/include/sys/ipc.h
        os/windows/posix/include/sys/mman.h
        os/windows/posix/include/sys/poll.h
        os/windows/posix/include/sys/resource.h
        os/windows/posix/include/sys/shm.h
        os/windows/posix/include/sys/socket.h
        os/windows/posix/include/sys/uio.h
        os/windows/posix/include/sys/un.h
        os/windows/posix/include/sys/wait.h
        os/windows/posix/include/dirent.h
        os/windows/posix/include/dlfcn.h
        os/windows/posix/include/libgen.h
        os/windows/posix/include/netdb.h
        os/windows/posix/include/poll.h
        os/windows/posix/include/semaphore.h
        os/windows/posix/include/syslog.h
        os/windows/dobuild.cmd
        os/windows/eula.rtf
        os/windows/examples.wxs
        os/windows/install.wxs
        os/windows/posix.c
        os/windows/posix.h
        os/binject.h
        os/kcompat.h
        os/os-aix.h
        os/os-android.h
        os/os-dragonfly.h
        os/os-freebsd.h
        os/os-hpux.h
        os/os-linux.h
        os/os-mac.h
        os/os-netbsd.h
        os/os-openbsd.h
        os/os-solaris.h
        os/os-windows.h
        os/os.h
        profiles/act.c
        profiles/tiobench.c
        t/jobs/t0001-52c58027.fio
        t/jobs/t0002-13af05ae-post
        t/jobs/t0002-13af05ae-pre
        t/jobs/t0003-0ae2c6e1-post.fio
        t/jobs/t0003-0ae2c6e1-pre.fio
        t/jobs/t0004-8a99fdf6.fio
        t/jobs/t0005-f7078f7b.fio
        t/jobs/t0006-82af2a7c.fio
        t/jobs/t0007-37cf9e3c.fio
        t/jobs/t0008-ae2fafc8.fio
        t/jobs/t0009-f8b0bd10.fio
        t/axmap.c
        t/btrace2fio.c
        t/debug.c
        t/debug.h
        t/dedupe.c
        t/genzipf.c
        t/ieee754.c
        t/lfsr-test.c
        t/log.c
        t/stest.c
        tools/plot/samples/fio-logs.tar.gz
        tools/plot/samples/Makefile
        tools/plot/fio2gnuplot
        tools/plot/fio2gnuplot.1
        tools/plot/fio2gnuplot.manpage
        tools/plot/graph2D.gpm
        tools/plot/graph3D.gpm
        tools/plot/math.gpm
        tools/fio_generate_plots
        tools/fio_generate_plots.1
        tools/genfio
        backend.c
        blktrace.c
        blktrace_api.h
        cairo_text_helpers.c
        cairo_text_helpers.h
        cconv.c
        cgroup.c
        cgroup.h
        client.c
        client.h
        configure
        COPYING
        debug.c
        debug.h
        diskutil.c
        diskutil.h
        err.h
        eta.c
        fifo.c
        fifo.h
        file.h
        filehash.c
        filehash.h
        filelock.c
        filelock.h
        filesetup.c
        FIO-VERSION-GEN
        fio.1
        fio.c
        fio.h
        fio_time.h
        flist.h
        flow.c
        flow.h
        gclient.c
        gclient.h
        gcompat.c
        gcompat.h
        gerror.c
        gerror.h
        gettime-thread.c
        gettime.c
        gettime.h
        GFIO-TODO
        gfio.c
        gfio.h
        ghelpers.c
        ghelpers.h
        goptions.c
        goptions.h
        graph.c
        graph.h
        hash.h
        helpers.c
        helpers.h
        HOWTO
        idletime.c
        idletime.h
        init.c
        io_ddir.h
        io_u.c
        io_u_queue.c
        io_u_queue.h
        ioengine.h
        ioengines.c
        iolog.c
        iolog.h
        json.c
        json.h
        libfio.c
        log.c
        log.h
        Makefile
        memalign.c
        memalign.h
        memory.c
        minmax.h
        MORAL-LICENSE
        mutex.c
        mutex.h
        options.c
        options.h
        parse.c
        parse.h
        printing.c
        printing.h
        profile.c
        profile.h
        README
        REPORTING-BUGS
        SERVER-TODO
        server.c
        server.h
        smalloc.c
        smalloc.h
        stat.c
        stat.h
        td_error.c
        td_error.h
        thread_options.h
        tickmarks.c
        tickmarks.h
        time.c
        trim.c
        trim.h
        verify.c
        verify.h
        workqueue.c
        workqueue.h)

add_executable(fio_fio_2_2_8 ${SOURCE_FILES})